--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
                 <h2>Add Your Tasks</h2>
                 <div class="task-form">
                     <input type="text" id="taskDescription" placeholder="Enter task description..." maxlength="100">
-                    <input type="number" id="taskCount" placeholder="Time count" min="1" max="10" value="1">
+                    <div class="number-input-wrapper">
+                        <input type="number" id="taskCount" placeholder="Time count" min="1" max="10" value="1">
+                        <div class="number-controls">
+                            <button type="button" class="number-btn number-btn-up" id="taskCountUp">+</button>
+                            <button type="button" class="number-btn number-btn-down" id="taskCountDown">-</button>
+                        </div>
+                    </div>
                     <button id="addTaskBtn">Add Task</button>
                     <button id="bulkImportBtn" class="bulk-import-btn">Bulk Import</button>
                 </div>
